--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,51 @@
     <artifactId>untitled4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+-<properties>
 
-         <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-        </plugin>
-    </plugins>
+<!-- Set the Java version used by the compiler. -->
+
+
+<!-- Setting to Java 8 will work, in most cases, for installed -->
+
+
+<!-- Java versions >= 8. -->
+
+
+<maven.compiler.source>8</maven.compiler.source>
+
+<maven.compiler.target>8</maven.compiler.target>
+
+<failOnMissingWebXml>false</failOnMissingWebXml>
+
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+</properties>
+
+
+-<build>
+
+
+-<plugins>
+
+<!-- The Surefire Plugin is needed to run JUnit 5 tests with Maven -->
+
+
+
+-<plugin>
+
+<artifactId>maven-surefire-plugin</artifactId>
+
+<version>2.22.2</version>
+
+<configuration> </configuration>
+
+</plugin>
+
+</plugins>
+
 </build>
+
+         
 
 </project>
